--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "babel-eslint": "^10.0.1",
     "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.7.0",
+    "copy-webpack-plugin": "^4.6.0",
     "css-loader": "^1.0.0",
     "eslint": "^5.9.0",
     "eslint-config-standard": "^12.0.0",
