--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,13 @@
 {
-    "presets": [
-      ["env", {
+  "presets": [
+    [
+      "env", {
         "modules": false,
         "targets": {
-          "browsers": ["> 1%", "last 2 versions", "not ie <= 8"]
+          "browsers": ["> 1%", "last 2 versions", "not ie <= 8"],
+          "node": "current"
         }
-      }]
+      }
     ]
-  }
+  ]
+}
