--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "jest": "^23.6.0",
     "jest-serializer-vue": "^2.0.2",
     "mini-css-extract-plugin": "^0.4.4",
+    "node-sass": "^4.10.0",
+    "sass-loader": "^7.1.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
     "vue-jest": "^3.0.0",
@@ -36,7 +38,8 @@
     "vue-template-compiler": "^2.5.17",
     "webpack": "^4.23.1",
     "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.10"
+    "webpack-dev-server": "^3.1.10",
+    "webpack-merge": "^4.1.4"
   },
   "scripts": {
     "test": "jest",
@@ -73,8 +76,12 @@
   },
   "keywords": [
     "vue",
-    "webpack",
-    "example"
+    "webpack 4",
+    "sass",
+    "stylus",
+    "scss",
+    "hot reload",
+    "production configuration"
   ],
   "author": "Maneesh",
   "license": "ISC",
